Prevent click on backstretch

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -83,6 +83,10 @@ h5 {
     }
 }
 
+.backstretch {
+    pointer-events: none;
+}
+
 @media (max-width: @screen-sm-max) {
     /*h1 {
         font-size: @font-size-h1-sm;
